fixed white space on the right

--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -194,9 +194,14 @@ body {
     font-size: 42px;
     color: @white-color;
     font-weight: 700;
-    width: 770px;
     text-align: center;
+    margin: 0;
   }
+
+  p:last-of-type {
+    margin-bottom: 40px;
+  }
+  
 
   .video-main {
     height: 433px;
@@ -492,7 +497,7 @@ body {
   width: 570px;
   position: fixed;
   top: 192px;
-  margin: 0 calc(50% - 335px);
+  margin: 0px calc(50% - 335px);
   padding: 56px 48px 0;
 
   .title {
